--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -760,6 +760,31 @@ body.bb-model-open {
 	span.bb-sep {
 		margin: 0 5px;
 	}
+	.document-breadcrumb{
+		list-style: none;
+		margin: 0;
+		text-align: left;
+		li{
+			display: inline-block;
+			font-weight: 600;
+			vertical-align: middle;
+			&:after{
+				content: "\f345";
+				font-family: dashicons;
+				font-size: 20px;
+				vertical-align: middle;
+				font-size: 15px;
+				margin-right: 6px;
+				margin-left: 6px;
+			}
+			&:last-child{
+				opacity: 0.8;
+				&:after{
+					display: none;
+				}
+			}
+		}
+	}
 }
 
 .bb-album-photos-list {
@@ -1687,182 +1712,129 @@ img.emojioneemoji {
 	.bb-dropdown-wrap select{
 		width: 100%;
 	}
-	// .bb-folder-location-select{
-	// 	background-repeat: no-repeat;
-	// 	background-position: right 1rem center;
-	// 	display: inline-block;
-	// 	font-family: inherit;
-	// 	font-style: inherit;
-	// 	font-size: 15px;
-	// 	height: 40px;
-	// 	outline: 0;
-	// 	vertical-align: middle;
-	// 	background-color: #fff;
-	// 	border: 1px solid #dedfe2;
-	// 	border-radius: 3px;
-	// 	box-shadow: none;
-	// 	color: #393e41;
-	// 	display: block;
-	// 	position: relative;
-	// 	&:after{
-	// 		content: '<';
-	// 		color: #dedfe2;
-	// 		position: absolute;
-	// 		right: 1em;
-	// 		top: 50%;
-	// 		transform: translateY(-50%) rotate(-90deg);
-	// 		-webkit-transform: translateY(-50%) rotate(-90deg);
-	// 		-moz-transform: translateY(-50%) rotate(-90deg);
-	// 		pointer-events: none;
-	// 	}
-	// 	.bb-folder-location-selected{
-	// 		line-height: 1.6875rem;
-	// 		padding: 5px 40px 7px 10px;
-	// 		display: block;
-	// 	}
-	// 	.bb-folder-location-select-list{
-	// 		position: absolute;
-	// 		left: -1px;
-	// 		right: -1px;
-	// 		bottom: 40px;
-	// 		margin: 0;
-	// 		background-color: #fff;
-	// 		border-radius: 4px;
-	// 		box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
-	// 		list-style: none;
-	// 		display: none;
-	// 		max-height: 320px;
-	// 		max-height: 45vh;
-	// 		overflow: auto;
-	// 		padding: 0;
-	// 		z-index: 11;
-	// 		li{
-	// 			cursor: pointer;
-	// 			padding: 5px 10px;
-	// 			&:hover, &.selected{
-	// 				color: #007cff;
-	// 				background-color: #f5f5f5;
-	// 			}
-	// 			&:before{
-	// 				font-family: dashicons;
-	// 				content: "\f318";
-	// 			}
-	// 			&.folder_l_1_1{
-	// 				padding-left: 25px;
-	// 			}
-	// 			&.folder_l_1_1_1{
-	// 				padding-left: 50px;
-	// 			}
-	// 			&.folder_l_1_1_1_1{
-	// 				padding-left: 75px;
-	// 			}
-	// 			&.folder_l_1_1_1_1_1{
-	// 				padding-left: 100px;
-	// 			}
-	// 			&.folder_l_1_1_1_1_1_1{
-	// 				padding-left: 125px;
-	// 			}
-	// 		}
-	// 	}
-	// }
-	.location-folder-list-wrap-main{
-		position: relative;
-		&:after{
-			content: "\f347";
-			font-family: dashicons;
-			color: #c4cbd1;
-			position: absolute;
-			right: 1em;
-			margin-right: 3px;
+}
+.bp-media-move-file{
+	.ac-document-close-button{
+		margin-left: auto;
+		line-height: 1;
+		font-size: 24px;
+		color: rgba(17,49,80,.4);
+		.dashicons{
+			font-size: 22px;
+		}
+	}
+	@media screen and (max-height: 900px){
+		.location-folder-list-wrap-main .location-folder-list-wrap{
+			position: fixed;
 			top: 50%;
-			pointer-events: none;
-			transform: translateY(-50%);
-			-webkit-transform: translateY(-50%);
-			-moz-transform: translateY(-50%);
-			font-size: 12px;
+			transform: translate(-50%, -50%);
+			left: 50%;
+			width: 560px;
+			max-width: 80%;
+			bottom: inherit;
 		}
-		.bb-folder-destination{
-			cursor: pointer;
+	}
+}
+.location-folder-list-wrap-main{
+	position: relative;
+	&:after{
+		content: "\f347";
+		font-family: dashicons;
+		color: #c4cbd1;
+		position: absolute;
+		right: 1em;
+		margin-right: 3px;
+		top: 50%;
+		pointer-events: none;
+		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		-moz-transform: translateY(-50%);
+		font-size: 12px;
+	}
+	.bb-folder-destination{
+		cursor: pointer;
+	}
+	.location-folder-list-wrap{
+		position: absolute;
+		bottom: 40px;
+		left: 0;
+		right: 0;
+		background-color: #fbfbfc;
+		border-radius: 4px;
+		box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
+		z-index: 11;
+		display: none;
+		.location-folder-title{
+			padding: 8px 0;
+			display: inline-block;
+			margin-left: 8px;
+			vertical-align: middle;
 		}
-		.location-folder-list-wrap{
-			position: absolute;
-			bottom: 40px;
-			left: 0;
-			right: 0;
-			background-color: #fbfbfc;
-			border-radius: 4px;
-			box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
-			z-index: 11;
+		.location-folder-back{
 			display: none;
-			.location-folder-title{
-				padding: 8px 0;
+			margin-left: 10px;
+			cursor: pointer;
+			vertical-align: middle;
+			i{
 				display: inline-block;
-				margin-left: 8px;
 				vertical-align: middle;
 			}
-			.location-folder-back{
-				display: none;
-				margin-left: 10px;
-				cursor: pointer;
-				vertical-align: middle;
-				i{
-					display: inline-block;
-					vertical-align: middle;
-				}
-			}
-			.location-folder-list{
-				overflow: auto;
-				max-height: 40vh;
-				min-height: 40vh;
-				list-style: none;
+		}
+		.location-folder-list{
+			overflow: auto;
+			max-height: 230px;
+			min-height: 230px;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			background-color: #fff;
+			li{
+				position: relative;
 				margin: 0;
 				padding: 0;
-				background-color: #fff;
-				li{
-					position: relative;
-					span{
-						padding: 10px 15px;
-						border-bottom: 1px solid #ccc;
-						display: block;
-						cursor: pointer;
-						&:before{
-							font-family: dashicons;
-							content: "\f318";
-							vertical-align: middle;
-							margin-right: 10px;
-						}
-						&:hover,&.selected{
-							background-color: #fbfbfc;
-						}		
+				span{
+					padding: 8px 15px;
+					border-bottom: 1px solid #ccc;
+					display: block;
+					cursor: pointer;
+					font-size: 15px;
+					&:before{
+						font-family: dashicons;
+						content: "\f318";
+						vertical-align: middle;
+						margin-right: 10px;
 					}
-					&:hover > .sub-menu-anchor{
-						visibility: visible;
-						opacity: 1;
-					}
-					.sub-menu-anchor{
-						position: absolute;
-						right: 5px;
-						top: 50%;
-						bottom: 0;
+					&:hover,&.selected{
 						background-color: #fbfbfc;
-						padding: 2px 3px;
-						line-height: 1;
-						visibility: hidden;
-						opacity: 0;
-						cursor: pointer;
-						transform: translateY(-50%);
-						display: inline-block;
-						height: auto;
-						width: auto;
-					}
-					
-					ul{
-						display: none;
-						margin: 0;
-						list-style: none;
-					}
+					}		
+				}
+				&:hover > .sub-menu-anchor{
+					visibility: visible;
+					opacity: 1;
+				}
+				.sub-menu-anchor{
+					position: absolute;
+					right: 5px;
+					top: 50%;
+					bottom: 0;
+					background-color: #fbfbfc;
+					padding: 2px 3px;
+					line-height: 1;
+					visibility: hidden;
+					opacity: 0;
+					cursor: pointer;
+					transform: translateY(-50%);
+					display: inline-block;
+					height: auto;
+					width: auto;
+				}
+				
+				ul{
+					display: none;
+					margin: 0;
+					list-style: none;
 				}
 			}
 		}
-	}	
+	}
 }
