#463 - Fixed word breaking in URL preview of activity

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -505,6 +505,10 @@
 	.activity-video-preview & {
 		padding: 0;
 	}
+
+	.activity-link-preview-body{
+		word-break: break-word;
+	}
 }
 
 .activity-url-thumb-nav {
@@ -558,6 +562,7 @@
 
 .activity-link-preview-title a {
 	color: inherit;
+	word-break: break-word;
 }
 
 #activity-close-link-suggestion {
