--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1800,6 +1800,10 @@ input.search-query-input {
   padding: 0;
 }
 
+.activity-link-preview-content .activity-link-preview-body {
+  word-break: break-word;
+}
+
 .activity-url-thumb-nav {
   position: absolute;
   bottom: 0;
@@ -1851,6 +1855,7 @@ input.search-query-input {
 
 .activity-link-preview-title a {
   color: inherit;
+  word-break: break-word;
 }
 
 #activity-close-link-suggestion {
