--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1713,7 +1713,7 @@ img.emojioneemoji {
 		width: 100%;
 	}
 }
-.bp-media-move-file{
+.bp-media-move-file-folder{
 	.ac-document-close-button{
 		margin-left: auto;
 		line-height: 1;
