--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -185,20 +185,6 @@
 				margin-bottom: $marg-sml;
 			}
 
-			.activity-inner,
-			blockquote {
-				background: $off-white;
-				margin: $marg-med 0 $marg-sml;
-				overflow: hidden;
-				padding: $pad-med;
-				border-radius: 3px;
-				font-style: normal;
-			}
-
-			blockquote a {
-				color: inherit;
-			}
-
 			p {
 				margin: 0;
 			}
@@ -450,7 +436,7 @@
 		border: 0;
 		border-radius: 0;
 		margin: 0;
-        padding: 0;
+                padding: 0;
 		max-width: 640px;
 	}
 
@@ -599,20 +585,49 @@
 .acomment-content .buddyboss-media-photo-link {
 	display: none !important;
 }
-@keyframes lazyAmination{
-    0%{
-        background-position: 100% 0
-    }
-    100%{
-        background-position: -300% 0
+
+blockquote.wp-embedded-content {
+    padding: 25px;
+    line-height: 1.5;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    color: #82878c;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    position: relative;
+    margin: 0;
+
+    & > a ,
+    & > p:first-child > a {
+        color: #32373c;
+        font-weight: 600;
+        font-size: 22px;
+        line-height: 1.3;
+        color: #32373c;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
-.activity-inner iframe.lazy{
-	animation-duration: 1.3s;
+
+.activity-inner iframe.lazy {
+    animation-duration: 1.3s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-name: lazyAmination;
     animation-timing-function: linear;
     background: #f6f7f8;
     background-size: 800px 104px;
+}
+
+@keyframes lazyAmination {
+    0% {
+        background-position: 100% 0;
+    }
+
+    100% {
+        background-position: -300% 0;
+    }
 }
