--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -55,11 +55,6 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 * @section 1.0 - BP Generic, Typography & Imagery
 *-------------------------------------------------------------------------------
 */
-body #buddypress * a {
-  box-shadow: none;
-  text-decoration: none;
-}
-
 body #buddypress #item-body blockquote,
 body #buddypress .bp-lists blockquote {
   margin-left: 10px;
@@ -1516,20 +1511,6 @@ input.search-query-input {
   margin-bottom: 10px;
 }
 
-.activity-list .activity-item .activity-content .activity-inner,
-.activity-list .activity-item .activity-content blockquote {
-  background: #fafafa;
-  margin: 15px 0 10px;
-  overflow: hidden;
-  padding: 1em;
-  border-radius: 3px;
-  font-style: normal;
-}
-
-.activity-list .activity-item .activity-content blockquote a {
-  color: inherit;
-}
-
 .activity-list .activity-item .activity-content p {
   margin: 0;
 }
@@ -1892,13 +1873,31 @@ input.search-query-input {
   display: none !important;
 }
 
-@keyframes lazyAmination {
-  0% {
-    background-position: 100% 0;
-  }
-  100% {
-    background-position: -300% 0;
-  }
+blockquote.wp-embedded-content {
+  padding: 25px;
+  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  color: #82878c;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  position: relative;
+  margin: 0;
+}
+
+blockquote.wp-embedded-content > a,
+blockquote.wp-embedded-content > p:first-child > a {
+  color: #32373c;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.3;
+  color: #32373c;
+}
+
+blockquote.wp-embedded-content > a:hover,
+blockquote.wp-embedded-content > p:first-child > a:hover {
+  text-decoration: underline;
 }
 
 .activity-inner iframe.lazy {
@@ -1909,6 +1908,15 @@ input.search-query-input {
   animation-timing-function: linear;
   background: #f6f7f8;
   background-size: 800px 104px;
+}
+
+@keyframes lazyAmination {
+  0% {
+    background-position: 100% 0;
+  }
+  100% {
+    background-position: -300% 0;
+  }
 }
 
 /**
