bulleted list in groups, needs a bottom margin

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
@@ -117,9 +117,10 @@
 		}
 
 	}
-	.group-description ul{
+	.group-description ul {
 		list-style: initial;
 		list-style-position: inside;
+		margin-bottom: 1rem;
 	}
 
 	.member-header-actions {
