--- a/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
@@ -117,10 +117,19 @@
 		}
 
 	}
-	.group-description ul {
-		list-style: initial;
-		list-style-position: inside;
-		margin-bottom: 1rem;
+
+	.group-description {
+		ul,
+		ol {
+			list-style-position: inside !important;
+			margin: 0 0 1rem;
+		}
+		ul {
+			list-style: initial;
+		}
+		ol {
+			list-style: decimal;
+		}
 	}
 
 	.member-header-actions {
