--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2663,10 +2663,18 @@ body.register .registration-popup .mfp-close:hover {
   margin: 5px 0 10px 10px;
 }
 
+.single-headers .group-description ul,
+.single-headers .group-description ol {
+  list-style-position: inside !important;
+  margin: 0 0 1rem;
+}
+
 .single-headers .group-description ul {
   list-style: initial;
-  list-style-position: inside;
-  margin-bottom: 1rem;
+}
+
+.single-headers .group-description ol {
+  list-style: decimal;
 }
 
 .single-headers .member-header-actions > .generic-button {
