Fixed privacy dropdown styling issues

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1240,3 +1240,107 @@ img.emojioneemoji {
 	width: 24px !important;
 	height: 24px !important;
 }
+
+.bb-media-only-privacy {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 11;
+
+    .privacy {
+        border: 1px solid;
+        border-radius: 4px;
+        padding: 2px 1px 2px 6px;
+    }
+
+    .bb-media-privacy-wrap:before {
+        display: none;
+    }
+    
+    .privacy-wrap {
+        display: inline-block;
+    }
+
+    .media-privacy {
+        display: none;
+        margin: 0;
+        position: absolute;
+        background: #fff;
+        box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+        border-radius: 4px;
+        padding: 5px 0;
+        min-width: 200px;
+        right: 0;
+        top: 35px;
+        z-index: 11;
+
+        &:before {
+            content: ' ';
+            position: absolute;
+            width: 0;
+            height: 0;
+            top: 0;
+            right: 25px;
+            border: 6px solid black;
+            border-color: #fff #fff transparent transparent;
+            -webkit-transform-origin: 0 0;
+            -ms-transform-origin: 0 0;
+            transform-origin: 0 0;
+            -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+            box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
+            z-index: 1002;
+        }
+
+        li {
+            cursor: pointer;
+            line-height: 1;
+            margin: 0;
+            padding: 10px 14px;
+            position: relative;
+            display: flex;
+            align-items: center;
+            margin-bottom: 1px;
+
+            &:hover {
+                background: #f5f5f5;
+            }
+        }
+
+        .selected {
+            background: #f5f5f5;
+        }
+    }
+
+    .media-privacy.bb-open {
+        display: block;
+    }
+}
+
+.media-privacy {
+    > li {
+        &:before {
+            content: "\f11f";
+            font-family: dashicons;
+            font-size: 16px;
+            vertical-align: middle;
+            display: inline-block;
+            margin-right: 10px;
+            width: 20px;
+            text-align: center;
+        }
+
+        &.onlyme:before {
+            content: "\f160";
+        }
+
+        &.loggedin:before {
+            content: "\f307";
+        }
+
+        &.friends:before {
+            content: "\f110";
+        }
+    }
+}
