--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -316,14 +316,15 @@
             position: relative;
             display: flex;
             align-items: center;
+            margin-bottom: 1px;
 
             &:hover {
-                background: $off-white;
+                background: #f5f5f5;
             }
         }
 
         .selected {
-            background: $off-white;
+            background: #f5f5f5;
         }
     }
 
@@ -356,6 +357,18 @@
         &.friends:before {
             content: "\f110";
         }
+    }
+}
+
+.bb-media-model-container {
+    .bb-media-privacy-wrap .activity-privacy {
+        left: auto;
+        right: 0;
+    }
+
+    .bb-media-privacy-wrap .activity-privacy:before {
+        left: auto;
+        right: 24px;
     }
 }
 
