--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -354,10 +354,12 @@ div.profile_completion_wrap {
 	.progress_container{
 		
 		border: 1px solid black;
+		border-radius: 12px;
 		
 		.pc_progress{
-			height: 20px; 
+			height: 8px; 
 			background-color: $informational;
+			border-radius: 12px 0 0 12px;
 		}
 	}
 	
@@ -380,7 +382,7 @@ div.profile_completion_wrap {
 	ul.pc_detailed_progress li.completed{
 		
 		span.completed_staus{
-			background-color: $border-good;
+			background-color: $update-success;
 		}
 	}
 	
