--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11935,67 +11935,57 @@ img.emojioneemoji {
   width: 100%;
 }
 
-@media screen and (max-height: 900px) {
-  .bp-media-move-folder .location-folder-list-wrap-main .location-folder-list-wrap,
-  .bp-media-move-file .location-folder-list-wrap-main .location-folder-list-wrap {
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    width: 560px;
-    max-width: 80%;
-    bottom: inherit;
-  }
+.bp-media-move-file .bb-model-footer,
+.bp-media-move-folder .bb-model-footer {
+  display: inline-block;
+  width: 100%;
+  text-align: right;
 }
 
-.bp-media-move-file .ac-document-close-button,
-.bp-media-move-folder .ac-folder-close-button {
-  margin-left: auto;
-  line-height: 1;
-  font-size: 24px;
-  color: rgba(17, 49, 80, 0.4);
+.bp-media-move-file .bb-model-footer a,
+.bp-media-move-folder .bb-model-footer a {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 20px 0 0;
 }
 
-.bp-media-move-file .ac-document-close-button .dashicons,
-.bp-media-move-folder .ac-folder-close-button .dashicons {
-  font-size: 22px;
+.bp-media-move-file .bb-model-footer a:last-child,
+.bp-media-move-folder .bb-model-footer a:last-child {
+  margin-right: 0;
 }
 
-.location-folder-list-wrap-main {
+.bp-media-move-file .bb-model-footer a.ac-document-close-button, .bp-media-move-file .bb-model-footer a.ac-folder-close-button,
+.bp-media-move-folder .bb-model-footer a.ac-document-close-button,
+.bp-media-move-folder .bb-model-footer a.ac-folder-close-button {
+  color: #a5a7ab;
+}
+
+.bb-field-wrap-search {
   position: relative;
 }
 
-.location-folder-list-wrap-main:after {
-  content: "\f347";
-  font-family: dashicons;
-  color: #c4cbd1;
+.bb-field-wrap-search:after {
+  content: '\e81f';
+  font-family: bb-icons;
+  display: inline-block;
+  font-size: 14px;
+  color: #4d5c6d;
+  opacity: .4;
   position: absolute;
-  right: 1em;
-  margin-right: 3px;
-  top: 50%;
-  pointer-events: none;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  font-size: 12px;
+  left: 12px;
+  top: 6px;
+}
+
+.bb-field-wrap-search .ac_document_search_folder {
+  border-radius: 30px;
+  padding-left: 35px;
 }
 
 .location-folder-list-wrap-main .bb-folder-destination {
   cursor: pointer;
 }
 
-.location-folder-list-wrap-main .location-folder-list-wrap {
-  position: absolute;
-  bottom: 40px;
-  left: 0;
-  right: 0;
-  background-color: #fbfbfc;
-  border-radius: 4px;
-  box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.08);
-  z-index: 111;
-  display: none;
-}
-
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-title,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-title {
   padding: 8px 0;
   display: inline-block;
@@ -12003,6 +11993,7 @@ img.emojioneemoji {
   vertical-align: middle;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-back,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back {
   display: none;
   margin-left: 10px;
@@ -12010,11 +12001,13 @@ img.emojioneemoji {
   vertical-align: middle;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-back i,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back i {
   display: inline-block;
   vertical-align: middle;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list {
   overflow: auto;
   max-height: 230px;
@@ -12023,44 +12016,51 @@ img.emojioneemoji {
   margin: 0;
   padding: 0;
   background-color: #fff;
+  border: 1px solid #e7e9ec;
+  border-radius: 4px;
+  padding: 0 10px;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li {
   position: relative;
   margin: 0;
   padding: 0;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span {
   padding: 8px 15px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #e7e9ec;
   display: block;
   cursor: pointer;
   font-size: 15px;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:before {
   font-family: dashicons;
   content: "\f318";
-  vertical-align: middle;
   margin-right: 10px;
 }
 
-.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:hover, .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected {
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span.selected,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected {
   background-color: #fbfbfc;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li:hover > .sub-menu-anchor,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:hover > .sub-menu-anchor {
   visibility: visible;
   opacity: 1;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
   position: absolute;
   right: 5px;
   top: 50%;
   bottom: 0;
-  background-color: #fbfbfc;
   padding: 2px 3px;
   line-height: 1;
   visibility: hidden;
@@ -12070,12 +12070,30 @@ img.emojioneemoji {
   display: inline-block;
   height: auto;
   width: auto;
+  transition: all ease 0.3s;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li ul,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li ul {
   display: none;
   margin: 0;
   list-style: none;
+}
+
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li:last-child > span,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:last-child > span {
+  border-bottom: 0;
+}
+
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list::-webkit-scrollbar,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list::-webkit-scrollbar {
+  width: 5px;
+}
+
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list::-webkit-scrollbar-thumb,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list::-webkit-scrollbar-thumb {
+  background-color: #a4acb4;
+  border-radius: 10px;
 }
 
 /* BASICS */
